// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`User settings API GET /user-settings should return list of user-settings 1`] = `
Array [
  Object {
    "testdata": "shared",
  },
]
`;

exports[`User settings API GET /user-settings/1 should return 200 when user is in db 1`] = `
Object {
  "testData": "shared",
}
`;

exports[`User settings API POST /user-settings should return 200 1`] = `
Object {
  "emailBetNotification": true,
  "userId": 1,
}
`;

exports[`User settings API PUT /user-settings should return 200 and creates new user if does not exist already 1`] = `
Object {
  "emailBetNotification": true,
  "userId": 2,
}
`;

exports[`User settings API PUT /user-settings should return 204 1`] = `Object {}`;
